# GUI_FTIR

./: .gitignore  CITATION.cff  README.md  Setup.py  Setup2.py  pyproject.toml  requirement.txt  requirements.txt
Code_Gui/: FTIR_GUI.py
Code_Gui/Gui_Calibration_Code/: Finding_Slit_and_Offset.py
Code_Gui/Gui_General_Code/: Gas_Mixtures_Spectra_Library.py
Code_Gui/Gui_Library/: Gui_Tab_Library.py  Gui_Workers - Copy.py  Gui_Workers.py
Installer/: readme.md
code/: readme.md
code/General_Functions_Library/: Gas_Mixtures_Spectra_Library.py  General_Functions_Library.py
code/Gui_Library/: Gui_Tab_Library.py
code/Gui_Tab_Library/: Gui_Workers.py  Gui_v1.py  Setup.py
v1.0/: readme.md
v1.0/code/General_Functions_Library/: Gas_Mixtures_Spectra_Library.py
v1.0/code/Gui_Library/: Gui_v1.py  Setup.py
v3.0/: .gitattributes  FTIR_GUI-2.0-win64.msi  FTIR_GUI-3.0-win64.msi  Setup.py
v3.0/Code_Gui/Gui_Calibration_Code/: Finding_Slit_and_Offset.py  Fitting_Ice_Band.py
v3.0/Code_Gui/Gui_General_Code/: General_Functions_Library.py
v3.0/Code_Gui/Gui_Library/: Gui_Tab_Library.py  Gui_Workers.py
v4.1/: FTIR_GUI-4.1-win64.msi  Setup.py
v4.1/Code_Gui/Gui_Calibration_Code/: Finding_Slit_and_Offset.py  Fitting_Ice_Band.py
v4.1/Code_Gui/Gui_General_Code/: Gas_Mixtures_Spectra_Library.py
v4.1/Code_Gui/Gui_Library/: Gui_Workers.py
v5.0/: Setup.py
v5.0/Code_Gui/: FTIR_GUI.py
v5.0/Code_Gui/Gui_General_Code/: Gas_Mixtures_Spectra_Library.py  General_Functions_Library.py
v5.0/Code_Gui/Gui_Library/: Gui_Workers.py  (+1 more)
v6.1/: Setup.py
v6.1/Code_Gui/: FTIR_GUI.py
(+9 files in other folders)
